force-app/main/default/objects/X7S_News_Setting__mdt/fields/Announce_Articles_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Announce_Articles_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Announce Articles Automatically</label>
    <type>Checkbox</type>
</CustomField>