force-app/main/default/objects/X7S_News_Setting__mdt/fields/Enable_Audience_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Enable_Audience_Targeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Audience Targeting</label>
    <type>Checkbox</type>
</CustomField>