force-app/main/default/objects/X7S_News_Setting__mdt/fields/Enable_Multi_Language__c.field-meta.xml
<CustomField>
    <fullName>Enable_Multi_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Multi-Language</label>
    <type>Checkbox</type>
</CustomField>