force-app/main/default/objects/X7S_News_Setting__mdt/fields/Require_Group_Membership__c.field-meta.xml
<CustomField>
    <fullName>Require_Group_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Require group membership for all group-related News articles</description>
    <inlineHelpText>Check to enforce group membership for all group related news articles</inlineHelpText>
    <label>Require Group Membership</label>
    <type>Checkbox</type>
</CustomField>