force-app/main/default/objects/X7S_News_Setting__mdt/fields/Use_Managed_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Use_Managed_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply managed sharing when creating a new record with publish now.</description>
    <inlineHelpText>Enable this to apply 7Summits Visibility Managed Sharing for  News and Publish Now.</inlineHelpText>
    <label>Use Managed Sharing</label>
    <type>Checkbox</type>
</CustomField>